优化代码了，完成美女模块

--- a/app/src/main/res/layout/item_ganhuo.xml
+++ b/app/src/main/res/layout/item_ganhuo.xml
@@ -3,6 +3,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:paddingRight="3dp"
     android:paddingLeft="3dp"
+    android:id="@+id/layout_ganhuo"
     android:layout_height="match_parent">
     <TextView
         android:textSize="20dp"
