--- a/app/src/main/res/layout/fragment_meizi.xml
+++ b/app/src/main/res/layout/fragment_meizi.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="我是美女节目"/>
+<com.jcodecraeer.xrecyclerview.XRecyclerView
+    android:id="@+id/RecyclerView_meizhi"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"/>
 </LinearLayout>
