优化代码了，完成美女模块刷新加载更多模块

--- a/app/src/main/res/layout/item_meizhi.xml
+++ b/app/src/main/res/layout/item_meizhi.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:paddingLeft="3dp"
+    android:paddingRight="3dp"
+    android:layout_height="100dp">
   <ImageView
     android:src="@mipmap/ic_launcher"
     android:id="@+id/img_meizhi"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:scaleType="fitXY"
+    android:layout_height="100dp"
     android:layout_gravity="center_horizontal"/>
     <TextView
         android:text="jack"
