知我 第一版大致完成  可能存在些bug  主体功能都成功 这个知我这个项目  第一版就完成了

--- a/app/src/main/res/layout/activity_gan_huo_datails.xml
+++ b/app/src/main/res/layout/activity_gan_huo_datails.xml
@@ -17,9 +17,16 @@
         android:background="@color/colorPrimary"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         />
+  <RelativeLayout
+      android:id="@+id/layout_gan_huo_detail"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent">
+      <WebView
+          android:id="@+id/webView_ganghuo"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"/>
+       <include layout="@layout/view_loading"/>
+        <include layout="@layout/view_net_error"/>
+  </RelativeLayout>
 
-<WebView
-    android:id="@+id/webView_ganghuo"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"/>
 </LinearLayout>
