--- a/app/src/main/res/layout/activity_new_datails.xml
+++ b/app/src/main/res/layout/activity_new_datails.xml
@@ -22,17 +22,24 @@
             app:contentScrim="?attr/colorPrimary"
             app:expandedTitleMarginStart="48dp"
             app:expandedTitleMarginEnd="64dp">
-
-            <ImageView
-                android:id="@+id/img_news_datails"
+            <FrameLayout
+                android:id="@+id/layout_collapsing"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="centerCrop"
-                android:fitsSystemWindows="true"
-                android:src="@mipmap/ic_launcher"
-                app:layout_collapseMode="parallax"
-                />
-
+                android:layout_height="match_parent">
+                <ImageView
+                    android:id="@+id/img_news_datails"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"
+                    android:fitsSystemWindows="true"
+                    android:src="@mipmap/ic_launcher"
+                    app:layout_collapseMode="parallax"
+                    />
+                <TextView
+                    android:background="#40000000"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+            </FrameLayout>
             <android.support.v7.widget.Toolbar
                 app:navigationIcon="?attr/homeAsUpIndicator"
                 android:id="@+id/toolbar_datails"
