完成 微博第三方登录和分享，QQ第三方登录 和分享（有点问题），微信第三方分享，

--- a/app/src/main/res/layout/view_nav_view.xml
+++ b/app/src/main/res/layout/view_nav_view.xml
@@ -20,6 +20,7 @@
           app:border_width="2dp"
           android:src="@mipmap/ic_avatar_default"/>
       <TextView
+          android:id="@+id/tv_login"
           android:layout_marginTop="20dp"
           android:layout_below="@id/img_avatar"
           android:textSize="16sp"
