--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,5 +16,17 @@
         <item name="android:textSize">15sp</item>
         <item name="textAllCaps">true</item>
     </style>
+    <style name="dialog" parent="@android:style/Theme.Dialog">
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+    </style>
 
-</resources>
+    <style name="share_anim" parent="android:Animation">
+    <item name="android:windowEnterAnimation">@anim/pop_enter_anim</item>
+    <item name="android:windowExitAnimation">@anim/pop_exit_anim</item>
+    </style>
+
+ </resources>
